--- a/4-DOM-pig-game/index.html
+++ b/4-DOM-pig-game/index.html
@@ -30,12 +30,11 @@
             </div>
             
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
-            <div class="winning-score-display">100</div>
+            <div class="winning-score-display">Winning Score: 100</div>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
-            <label for="">Winning Score</label>
-            <input type="text" class="winning-score">
-            <button onclick="getWinningScore()">Submit</button>
+            <input type="text" class="winning-score" placeholder="Winning Score">
+            <button onclick="getWinningScore()" class="submit-score">Submit</button>
             
             <img src="dice-5.png" alt="Dice" class="dice">
             <img src="dice-5.png" alt="Dice2" class="dice2">
